# accountable-surface

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  THEORY.md  THESIS.md  USAGE.md  pyproject.toml
.github/workflows/: ci.yml
docs/: INTRODUCTION.md  SPEC-actuation.md  SPEC-interoception.md  SPEC-persistence.md
docs/brand/: README.md
docs/design/: 2026-06-22-shared-world-surface.md
docs/superpowers/plans/: 2026-06-22-bilateral-eye-increment-1.md  2026-06-22-screen-capture-source.md
examples/: actuate_demo.py  demo.py  goal_demo.py  grounded_actuate_demo.py  grounding_demo.py  smoke_mcp.py  spa_actuate_demo.py  web_actuate_demo.py
project-docs/specs/: SPEC-accountable-surface-forward-delivery.md
src/accountable_surface/: __init__.py  browser_effector.py  certify.py  effector.py  grant.py  http_driver.py  journal_chain.py  os_effector.py  playwright_driver.py  reference.py  server.py  surface.py  web_effector.py
src/accountable_surface/world/: pilot.py  (+8 more)
tests/: test_actuate.py  test_browser_effector.py  test_browser_integrity.py  test_certify.py  test_effector.py  test_goal.py  test_grounded_actuation.py  test_http_driver.py  test_integrity_redteam.py  test_interoception.py  test_journal_chain_tamper.py  test_os_effector.py  test_persistence.py  test_pilot.py  test_reel.py  test_reference.py  test_screen.py  test_server.py  test_sight.py  test_surface.py  test_web_effector.py  test_world_server.py  test_world_session.py
web/: index.html  overlay.js  overlay.test.mjs  recheck.js  recheck.test.mjs  screen.html  screen.js  together.html  together.js  watch.html  watch.js  world.js
(+3 files in other folders)
