[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "accountable-surface"
version = "0.1.0"
description = "Gate AI-agent actions with explicit grants, durable journals, MCP server support, and verification."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Zain Dana Harper" }]
keywords = ["accountability", "perception", "actuation", "witness", "gate", "agent", "mcp", "stewardship"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
]
# Core perception + gate come from the sibling repos coherence-membrane and
# proof-surface (see README) -- kept off PyPI deliberately, like those repos.
dependencies = []

[project.urls]
Homepage = "https://harperz9.github.io"
Repository = "https://github.com/HarperZ9/accountable-surface"
Issues = "https://github.com/HarperZ9/accountable-surface/issues"

[project.optional-dependencies]
server = ["mcp>=1.0"]      # the live MCP server (accountable_surface.server)
browser = ["playwright>=1.40"]  # the optional real headless-browser backend (PlaywrightDriver)
test = ["pytest>=8"]

[project.scripts]
accountable-surface-server = "accountable_surface.server:main"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
